# erpnext-restaurant

./: .editorconfig  .gitignore  .prettierrc  pyproject.toml
restaurant_management/: api.py  fixtures.py  hooks.py
restaurant_management/fixtures/: custom_field.json
restaurant_management/public/: build.json
restaurant_management/public/helper/js/: desk-form-class.js  desk-modal.js  frappe-form-class.js  frappe-helper-api.js  jshtml-class.js  num-pad-class.js
restaurant_management/public/js/: index.js
restaurant_management/public/restaurant/js/: items-tree-class.js  menu-manage-class.js  order-item-class.js  order-manage-class.js  pay-form-class.js  process-manage-class.js  product-item-class.js  reservation-manage.js  restaurant-object-class.js  table-order-class.js
restaurant_management/restaurant_management/desk_form/order_item_editor/: order_item_editor.json
restaurant_management/restaurant_management/desk_form/payment_order/: payment_order.json
restaurant_management/restaurant_management/desk_form/restaurant_order_customer/: restaurant_order_customer.json
restaurant_management/restaurant_management/doctype/printer_restaurant/: printer_restaurant.js  printer_restaurant.json  printer_restaurant.py  test_printer_restaurant.py
restaurant_management/restaurant_management/doctype/product_bundle_choice/: product_bundle_choice.json  product_bundle_choice.py
restaurant_management/restaurant_management/doctype/restaurant_menu/: restaurant_menu.js  restaurant_menu.json
restaurant_management/setup/: install.py
(+15 files in other folders)
